samples/_failures_safe/1761789950_991f23_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d79f8a4.c: In function ‘main’:
./samples/SAFE/__tmp_4d79f8a4.c:145:5: error: expected expression at end of input
  145 |     memset(&ib,
      |     ^~~~~~
./samples/SAFE/__tmp_4d79f8a4.c:145:5: error: too few arguments to function ‘memset’
In file included from /usr/include/features.h:502,
                 from /usr/include/x86_64-linux-gnu/bits/libc-header-start.h:33,
                 from /usr/include/stdio.h:28,
                 from ./samples/SAFE/__tmp_4d79f8a4.c:2:
/usr/include/x86_64-linux-gnu/bits/string_fortified.h:57:1: note: declared here
   57 | __NTH (memset (void *__dest, int __ch, size_t __len))
      | ^~~~~
./samples/SAFE/__tmp_4d79f8a4.c:145:5: error: expected declaration or statement at end of input
  145 |     memset(&ib,
      |     ^~~~~~
